update: Add database integration and various API endpoints

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
 GEMINI_API_KEY=AIzaSyC6Jj9xuBP2SVWvOWi8Ca3VsiY1RnsrgDs
+
+# PostgreSQL Database Configuration
+DATABASE_URL="postgresql://ieca_user:ieca_secure_password@localhost:5432/ieca_db?schema=public"
+POSTGRES_USER=ieca_user
+POSTGRES_PASSWORD=ieca_secure_password
+POSTGRES_DB=ieca_db
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+# JWT Secret for authentication
+JWT_SECRET=your-super-secret-jwt-key-change-in-production-please
