--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
-  "name": "nextn",
-  "version": "0.1.0",
+  "name": "ieca-platform",
+  "version": "1.0.0",
+  "description": "Indian Error Cyber Army - India's Premier Cybersecurity Community Platform",
+  "keywords": ["cybersecurity", "community", "india", "security", "hacking", "ethical"],
+  "homepage": "https://ieca.zehrasec.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yashab-cyber/ieca.git"
+  },
+  "author": {
+    "name": "ZehraSec & Yashab Alam",
+    "email": "contact@zehrasec.com",
+    "url": "https://zehrasec.com"
+  },
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
@@ -17,7 +30,10 @@
     "db:reset": "prisma migrate reset",
     "db:studio": "prisma studio",
     "db:setup": "./scripts/setup-database.sh",
-    "db:test": "tsx scripts/test-db.ts"
+    "db:test": "tsx scripts/test-db.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
@@ -73,10 +89,18 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "9.30.1",
+    "eslint-config-next": "15.3.5",
     "genkit-cli": "^1.13.0",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
