--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# IECA Platform Environment Configuration
+
+# Google AI API Key for Genkit (Get from https://makersuite.google.com/app/apikey)
 GEMINI_API_KEY=AIzaSyC6Jj9xuBP2SVWvOWi8Ca3VsiY1RnsrgDs
 
 # PostgreSQL Database Configuration
@@ -8,5 +11,40 @@ POSTGRES_DB=ieca_db
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
-# JWT Secret for authentication
-JWT_SECRET=your-super-secret-jwt-key-change-in-production-please
+# JWT Secret for authentication (Strong 256-bit key)
+JWT_SECRET=ieca-jwt-super-secure-key-2025-cybersecurity-platform-india-ethical-hacking
+
+# SMTP Email Configuration (Gmail)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=230230218@hbtu.ac.in
+SMTP_PASS=uucl wogc ndna ruyp
+
+# Next.js Environment
+NODE_ENV=development
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=ieca-nextauth-secret-2025-cybersecurity-community-india
+
+# Optional: Analytics and Monitoring
+GOOGLE_ANALYTICS_ID=your_ga_id_here
+SENTRY_DSN=your_sentry_dsn_here
+
+# Optional: Email Configuration (for contact forms, notifications)
+# Gmail: smtp.gmail.com, Port: 587, Use App Password
+# Outlook: smtp-mail.outlook.com, Port: 587
+# Yahoo: smtp.mail.yahoo.com, Port: 587
+# Custom SMTP: your-smtp-server.com, Port: 587 or 465
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=230230218@hbtu.ac.in
+SMTP_PASSWORD=@Ethicalhacker07
+EMAIL_FROM=230230218@hbtu.ac.in
+ADMIN_EMAILS=yashabalam707@gmail.com,230230218@hbtu.ac.in
+
+# Optional: File Upload Configuration
+UPLOAD_MAX_SIZE=10485760
+ALLOWED_FILE_TYPES=jpg,jpeg,png,pdf,doc,docx
+
+# Optional: Rate Limiting
+RATE_LIMIT_MAX=100
+RATE_LIMIT_WINDOW=900000
