--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "ieca-platform",
   "version": "1.0.0",
   "description": "Indian Error Cyber Army - India's Premier Cybersecurity Community Platform",
-  "keywords": ["cybersecurity", "community", "india", "security", "hacking", "ethical"],
+  "keywords": [
+    "cybersecurity",
+    "community",
+    "india",
+    "security",
+    "hacking",
+    "ethical"
+  ],
   "homepage": "https://ieca.zehrasec.com",
   "repository": {
     "type": "git",
@@ -63,6 +70,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -72,10 +80,12 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.13.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.5",
     "patch-package": "^8.0.0",
     "pg": "^8.16.3",
     "prisma": "^6.11.1",
